# cedar-examples

./: .gitignore  Cargo.toml  NOTICE  README.md  test_utils.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  expand_example.yml  new_example.yml  report-a-security-vulnerability.md
.github/workflows/: build_java_hello_world_reusable.yml  build_java_partial_evaluation_reusable.yml  build_tiny_todo_go_reusable.yml  (+5 more)
cedar-analysis-mcp-server/: Dockerfile  README.md
cedar-example-use-cases/: README.md  run.sh
cedar-github-model-app/: Cargo.toml  README.md
cedar-java-hello-world/: README.md  build.gradle  config.sh  settings.gradle
cedar-java-partial-evaluation/: Dockerfile  README.md  settings.gradle
cedar-policy-language-in-action/: README.md  run.sh
cedar-rust-hello-world/: Cargo.toml  README.md
cedar-rust-hello-world/src/: main.rs
cedar-wasm-example/: README.md  jest.config.ts  main.ts  package-lock.json  package.json  tsconfig.json
oopsla2024-benchmarks/: Cargo.toml  Dockerfile  README.md  openfga-timing.patch  plot.py  validate_all_benchmarks.sh
oopsla2024-benchmarks/benches/: README.md
oopsla2024-benchmarks/benches/gdrive-templates/cedar/: gdrive-templates.cedarschema.json
oopsla2024-benchmarks/benches/gdrive/openfga/: authorization-model.json
oopsla2024-benchmarks/benches/gdrive/rego/: gdrive.rego
oopsla2024-benchmarks/benches/github-templates/cedar/: policies.cedar
oopsla2024-benchmarks/benches/github/rego/: github.rego
oopsla2024-benchmarks/benches/tinytodo/openfga/: authorization-model.json
oopsla2024-benchmarks/benches/tinytodo/rego/: tinytodo.rego  tinytodo_tco.rego
oopsla2024-benchmarks/generators/: gdrive_entity_generator.py  gdrive_templates_entity_generator.py  github_entity_generator.py  github_templates_entity_generator.py  tinytodo_entity_generator.py
oopsla2024-benchmarks/opa-harness/cmd/harness/: main.go
oopsla2024-benchmarks/openfga-examples/: README.md  run.sh  slice.sh
oopsla2024-benchmarks/openfga-examples/gdrive/: entities.json
oopsla2024-benchmarks/openfga-examples/gdrive-templates/: entities.json  linked  policies.cedar
oopsla2024-benchmarks/openfga-examples/gdrive-templates/allow_requests/: 1.json  2.json  4.json
oopsla2024-benchmarks/openfga-examples/gdrive-templates/deny_requests/: 5.json  6.json  7.json  8.json
oopsla2024-benchmarks/openfga-examples/gdrive/allow_requests/: 3.json
oopsla2024-benchmarks/openfga-examples/github/: entities.json
oopsla2024-benchmarks/openfga-examples/github-templates/: entities.json  github-templates.cedarschema.json  linked
oopsla2024-benchmarks/openfga-examples/github-templates/allow_requests/: 1.json  2.json
oopsla2024-benchmarks/openfga-examples/github/allow_requests/: 3.json  4.json
oopsla2024-benchmarks/openfga-examples/github/deny_requests/: 5.json  6.json
oopsla2024-benchmarks/openfga-examples/openfga/gdrive/: README.md  assertions.json  authorization-model.dsl  store.json  tuples.json
oopsla2024-benchmarks/openfga-examples/openfga/github/: README.md  assertions.json  authorization-model.dsl  authorization-model.json  store.json  tuples.json
oopsla2024-benchmarks/rego-harness/cmd/harness/: main.go
oopsla2024-benchmarks/rego-harness/harness/: auth.go  input.go
oopsla2024-benchmarks/src/: apps.rs  cedar_engine.rs  entity_graph.rs  lib.rs  main.rs  openfga_engine.rs  rego_engine.rs  slicing.rs  utils.rs
oopsla2024-benchmarks/src/openfga_engine/: client.rs
oopsla2024-benchmarks/src/rego_requests/: gdrive.rs  github.rs  mod.rs
oopsla2024-benchmarks/src/tinytodo_generator/: cedar.rs  common.rs  constants.rs  entities.rs  list.rs  mod.rs  opa.rs  teams.rs  users.rs
oopsla2024-benchmarks/tinytodo/openfga/: authorization-model.dsl
oopsla2024-benchmarks/tinytodo/rego/cmd/tinytodo/: main.go
oopsla2024-benchmarks/tinytodo/rego/tinytodo/: auth.go  input.go
src/: main.rs
tiny-todo/: Cargo.toml  README.md  entities.json  policies.cedar  schema.json  tinytodo.py
tiny-todo/src/: api.rs  context.rs  entitystore.rs  main.rs  objects.rs  util.rs
tinytodo/: Cargo.toml  README.md  TUTORIAL.md  TUTORIAL_TEMPLATE.md  docker-compose-example-cedar.yml  entities.json  policies-templates.cedar  policies.cedar  test_tinytodo.py  tinytodo-templates.cedarschema  tinytodo-templates.cedarschema.json  tinytodo.cedarschema  tinytodo.cedarschema.json  tinytodo.py
tinytodo-go/: README.md  go.mod  go.sum  test_tinytodo.py  tinytodo.py
tinytodo-types/: tinytodo.py
tinytodo/data/: data.json
tinytodo/frontend/: tinytodo-web.py
tinytodo/frontend/static/: hello.css
tinytodo/frontend/templates/: index.html  lists.html  login.html  main.html  teams.html
tinytodo/frontend/templates/list/: create.html  index.html
tinytodo/frontend/templates/team/: create.html  index.html
tinytodo/src/: api.rs  context.rs  entitystore.rs  main.rs  objects.rs  policy_store.rs  timebox.rs  util.rs  witnesses.rs
(+239 files in other folders)
