[package]
name = "cedar-rust-hello-world"
edition = "2018"

version = "0.1.0"
publish = false

[dependencies]
serde_json = "1.0"

[dependencies.cedar-policy]
version = "4.1.0"
git = "https://github.com/cedar-policy/cedar"
branch = "main"
#Do not add any lines below this. CI relies on the previous line being the second-to-last line in the file
