[package]
name = "cedar-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arbitrary = "1.3"
average = "0.14"
cedar-policy-core = { git = "https://github.com/cedar-policy/cedar-spec", branch = "release/3.0.x", version = "=3.0.1" }
cedar-policy-generators = { git = "https://github.com/cedar-policy/cedar-spec", branch = "release/3.0.x", version = "=3.0.1" }
cedar-policy-validator = { git = "https://github.com/cedar-policy/cedar-spec", branch = "release/3.0.x", version = "=3.0.1" }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.11"
itertools = "0.12"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.2", features = ["arbitrary"] }

[features]
default = []
