[package]
name = "tiny-todo-server"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.4"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
cedar-policy = "2.0"
thiserror =  "1"
itertools = "0.10.5"
