[package]
name = "tiny-todo-server"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "=0.3.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
thiserror =  "1"
itertools = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
serde_with = "3.8.1"

[features]
use-templates = []

[dependencies.cedar-policy]
features = ["partial-eval"]
version = "4.0.0"
git = "https://github.com/cedar-policy/cedar"
branch = "main"
#Do not add any lines below this. CI relies on the previous line being the second-to-last line in the file
